# easy_english

./: .flake8  .gitignore  docker-compose.test.yml  docker-compose.yml
.github/workflows/: build-deploy.yaml  build-pull-request.yaml
backend/: Dockerfile  pyproject.toml
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2024_03_25_1131-824f3ade3a93_init_migration.py  2024_03_25_1200-cb0e7b0c11ef_create_main_tables.py  2024_04_11_0855-61d99415d703_create_base_tables.py  2024_04_11_0856-ee2dafd89576_create_words_table.py
backend/src/app/: __main__.py  admin.py  server.py
backend/src/app/core/: config.py  database.py
backend/src/app/dependencies/: auth.py  db.py
backend/src/db_repositories/: base_repositories.py  base_repository.py  user_repository.py  vocabulary_repository.py
backend/src/managers/: redis_manager.py
backend/src/models/: __init__.py  admins.py  users.py  vocabulary.py
backend/src/routers/: __init__.py  auth_router.py  vocabularies.py
backend/src/schemas/: auth_schemas.py  vocabularies.py
backend/src/services/: user_service.py  vocabulary_service.py
backend/src/storages/: jwt_token_storage.py
backend/src/tests/: test_vocabulary.py  tests_vocabulary.py  utils_for_test.py
backend/src/utils/: admin_auth_backend.py  jwt_token.py  utils_for_test.py
var/postgres/: postmaster.pid
var/postgres/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2397  2671  2672  pg_control  pg_internal.init
var/postgres/pg_stat/: db_0.stat  db_13511.stat  global.stat
var/postgres/pg_stat_tmp/: db_0.stat  (+2 more)
(+150 files in other folders)
